--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [
     {name = "CIOI",email = "rhkr9693@gmail.com"}
 ]
-package-mode = false
+
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -18,6 +18,17 @@ dependencies = [
 ]
 
 
+[tool.poe.tasks]
+test = "python -m pytest"
+
+[tool.poetry]
+package-mode = false
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+poethepoet = "^0.33.1"
+
